...
                                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                            <integer key="value" value="16"/>
                                                        </userDefinedRuntimeAttribute>
                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                                    </userDefinedRuntimeAttributes>
                                                </imageView>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D86-Fn-sk7" userLabel="LikeButton">
                                                    <rect key="frame" x="333" y="4" width="44" height="44"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="LikeButton"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="44" id="fM2-bF-oXn"/>
                                                        <constraint firstAttribute="width" constant="44" id="paT-jw-uOC"/>
                                                    </constraints>
...
                                <connections>
                                    <outlet property="delegate" destination="5nz-5H-fTx" id="mU2-ym-Fmk"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0vD-tX-abf">
                                <rect key="frame" x="8" y="8" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="navBackButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="KKF-wh-Q4A"/>
                                    <constraint firstAttribute="width" constant="48" id="zSB-zQ-t1y"/>
                                </constraints>
                                <color key="tintColor" name="YP White (iOS)"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
...
                                    <constraint firstAttribute="width" constant="60" id="Fh0-Bf-evQ"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WtL-T9-mXt">
                                <rect key="frame" x="16" y="680" width="361" height="48"/>
                                <color key="backgroundColor" name="YP White (iOS)"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="zVf-Pn-ziJ"/>
                                </constraints>
                                <color key="tintColor" name="YP Black (iOS)"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Войти">
...
                                    <action selector="didTapBackButton:" destination="gsI-Zi-0ZS" eventType="touchUpInside" id="bu2-sV-GZ1"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="WGE-4X-Zpd"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="UnsplashWebView"/>
                        <constraints>
                            <constraint firstAttribute="bottom" secondItem="2xa-ME-0O1" secondAttribute="bottom" id="00u-Ak-R3z"/>
                            <constraint firstAttribute="trailing" secondItem="2xa-ME-0O1" secondAttribute="trailing" id="M07-9A-iro"/>
                            <constraint firstItem="2xa-ME-0O1" firstAttribute="leading" secondItem="VHl-oP-Hrs" secondAttribute="leading" id="Os5-qD-sVh"/>
                            <constraint firstItem="mUk-LM-Fz2" firstAttribute="top" secondItem="WGE-4X-Zpd" secondAttribute="top" constant="9" id="UX9-1b-P65"/>
                            <constraint firstItem="2xa-ME-0O1" firstAttribute="top" secondItem="mUk-LM-Fz2" secondAttribute="bottom" id="UiJ-T3-AM6"/>
...
